[package]
name = "riet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
image = "0.23.14"
log = "0.4.14"
num-bigint = "0.4.2"
num-traits = "0.2.14"
simple_logger = { version = "1.11.0", features = ["colors", "stderr"], default-features = false }
structopt = "0.3.23"
